z-index fixes in medicine page

--- a/src/components/header/header.module.scss
+++ b/src/components/header/header.module.scss
@@ -9,6 +9,7 @@
     background-color: rgba(255, 255, 255, 0);
     position: absolute;
     margin-top: 30px;
+    z-index: 10;
 }
 
 
