--- a/src/components/layout/layout.module.scss
+++ b/src/components/layout/layout.module.scss
@@ -84,7 +84,7 @@
     height: 100%;
     position:fixed;
     background-color: rgba(66, 66, 66, 0.315);
-
+    z-index: 999;
     display: flex;
     align-items: center;
     justify-content: center;
