--- a/src/components/medicine/medicine.module.scss
+++ b/src/components/medicine/medicine.module.scss
@@ -32,7 +32,7 @@
     color: black;
     text-align: center;
     font-style: normal;
-    z-index: 10;
+    z-index: 2;
 }
 
 .subheading {
@@ -43,7 +43,7 @@
     text-align: center;
     margin-bottom: 90px;
     width: 70%;
-    z-index: 10;
+    z-index: 2;
 }
 
 .header-perso {
@@ -109,6 +109,7 @@
     background-color: white;
     position: absolute;
     opacity: 30%;
+    z-index: 1;
 }
 
 .unhide-PF {
@@ -867,7 +868,7 @@
         width: 300px;
         font-weight: 500;
         text-align: center;
-        margin-bottom: 50px;
+        margin-bottom: 25px;
     }
 
     .choose-requestor-no-account {
